# semi-supervised-classification

./: .gitignore  README.md  benchmark_full_results.csv  directory_tree.json  pyproject.toml
examples/: experiment_loop.py  graph_example.py  run_full_benchmark.py  run_full_benchmark_sbm.py  run_full_benchmark_scm.py  run_minimal.py  run_minimal_graph.py
results/20250515-1644/: results.csv
src/ssl_bench/: __init__.py  benchmark.py  cache.py  cli.py  experiment.py  predictor.py  registry.py
src/ssl_bench/data/: __init__.py  base.py  dataset_loader.py  tabular.py
src/ssl_bench/data/loaders/: __init__.py  cifar10_raw.py
src/ssl_bench/datamodule/: __init__.py  image.py  text.py
src/ssl_bench/datamodule/graph/: anchor.py  base.py  epsilon.py  knn.py
src/ssl_bench/examples/: run_minimal.py
src/ssl_bench/methods/: __init__.py  adsh.py  base.py  dash.py  democratic_co_learning.py  ebsa.py  gfh.py  gfhf.py  mssboost.py  poisson_learning.py  self_training.py  setred.py  snnrce.py  supervised.py  tri_training.py  ttadec.py
src/ssl_bench/models/: base.py  sklearn.py  torch.py  torch_model.py
src/ssl_bench/transforms/: __init__.py  transformer.py
tests/: test_cifar10_raw.py  test_data_module.py  test_dataset_loader.py  test_experiment.py  test_methods.py  test_methods_supervised.py  test_models.py  test_predictor.py  test_smoke.py  test_transformer.py
