[tool.poetry]
name = "semi-supervised-classification"
version = "0.1.0"
description = "Framework de benchmarking pour la classification semi-supervisée"
authors = ["melvinbarbaux"]
readme = "README.md"
packages = [
  { include = "ssl_bench", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
numpy = ">=2.2.5,<3.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
torch = { version = ">=2.0.0,<3.0.0"}
torchvision = { version = ">=0.15.0,<1.0.0"}
pillow = "^11.2.1"
click = "^8.1.8"
timm = "^1.0.15"

[tool.poetry.extras]
gpu = ["torch", "torchvision"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"